# Bemental77.github.io

./: .babelrc  .eslintrc.json  .gitattributes  .gitignore  .prettierrc.json  APP_ARCHITECTURE.md  CLAUDE.md  CONVERSION_SUMMARY.md  DEVELOPMENT_GUIDE.md  PROJECT_CHECKLIST.md  QUICK_REFERENCE.md  REACT_NATIVE_SETUP.md  README.md  about.html  app.json  contact.html  gamecube.html  gba.html  index.html  interests.html  metro.config.js  package-lock.json  package.json  playground.html  ps1.html  resume.html  settings.gradle.kts  tsconfig.json  verify-setup.sh
.next/: trace
.next/cache/: .rscinfo
.next/cache/webpack/client-development/: index.pack.gz.old
.next/cache/webpack/server-development/: index.pack.gz.old
.next/static/chunks/fallback/: amp.js  react-refresh.js  webpack.js
app/: build.gradle.kts
app/src/androidTest/java/com/example/chupacabra/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/chupacabra/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
assets/js/: getUserData.js
bementalCompiler/: CMakeLists.txt
bementalCompiler/guests/powerpc/: CMakeLists.txt  gekko_emit.cpp  gekko_emit.h
bementalCompiler/guests/sh4/: wasm_emit.h.reference
bementalCompiler/include/bementalCompiler/: bemental.h  block_cache.h  types.h  wasm_module_builder.h
bementalCompiler/src/: block_cache.cpp
bementalCompiler/tests/: CMakeLists.txt  test_dispatch.cpp  test_gekko.cpp
gamecube/dolphin-bridge/: EmscriptenMain.cpp  EmscriptenWorker.cpp  dolphin_stubs.cpp  worker_funcs.js
gamecube/dolphin_libretro/: dolphin_libretro.js  dolphin_libretro.wasm  dolphin_worker.js  dolphin_worker.wasm
gamecube/roms/: Sonic Adventure 2 - Battle (USA).iso
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mkScoreboad/: package-lock.json
mkScoreboad/public/: index.html
mkScoreboad/src/: App.js  App.tsx  fonts.css
mkScoreboard/: .gitignore  package-lock.json  package.json
mkScoreboard/src/: index.tsx
n64/N64Wasm/roms/: Banjo-Dreamie.z64  banjo-tooie.z64  banjoChristmas.z64  bk-jiggiesoftime.z64  blitz2001.z64  clayFighter.z64  conker.z64  crusin.z64  diddyKongRacing.z64  dinosaurplanet.z64  dk64.z64  flyingDragon.z64  gauntletLegends.z64  mariokart.z64  marioo.z64  mariopartynew.z64  newTetris.z64  papermario.z64  pkmnsnap.z64  podracer.z64  starfox.z64  starfoxsurvival.z64  superMarioStarRoad.z64  thewheel.z64  zeldaMasterOfTime.z64
ps1/: pcsx_rearmed_libretro.js  pcsx_rearmed_libretro.wasm
ps1/duckstation-master/: CMakeLists.txt
ps1/ps1Wasm/pcsx-wasm-src/: Makefile  Makefile.modern  README.md  pcsx_worker.js  pcsx_worker.wasm  pcsx_ww.js  pcsx_ww.wasm  wasmpsx_worker.js  wasmpsx_worker.wasm
ps1/ps1Wasm/pcsx-wasm-src/docs/: pcsx_worker.wasm  pcsx_ww.wasm
ps1/ps1Wasm/pcsx-wasm-src/gui/: workerMain.c
ps1/ps1Wasm/pcsx-wasm-src/js/: worker_funcs.js
ps1/ps1Wasm/pcsx-wasm-src/libpcsxcore/: cdrom.c  mdec.c  misc.c  psxcounters.c  psxhle.c  r3000a.c
ps1/ps1Wasm/pcsx-wasm-src/plugins/dfsound/: sdl.c
ps1/ps1Wasm/pcsx-wasm-src/plugins/dfxvideo/: cfg.c  fps.c
src/: App.tsx
src/components/: GameBoard.tsx  GameControls.tsx  Player.tsx
src/navigation/: RootNavigator.tsx
src/screens/: GameOverScreen.tsx  GameScreen.tsx  HomeScreen.tsx  SettingsScreen.tsx
src/store/: gameStore.ts
src/types/: index.ts
styles/: App.css
tools/: jsearch.js
(+5 files in other folders)
